--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.mjs",
+    "start": "nodemon app.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "production": "NODE_ENV='production' node app.js"
   },
