--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "scripts": {
     "start": "nodemon app.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "production": "NODE_ENV='production' node app.js"
+    "production": "NODE_ENV='production' node app.js",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "bson": "^6.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -21,7 +25,14 @@
     "method-override": "^3.0.0",
     "mongodb": "6.9",
     "morgan": "^1.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
+    "vite": "^5.4.6"
   }
 }
