--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "morgan": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/method-override": "^0.0.35",
+    "@types/morgan": "^1.9.9",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "vite": "^5.4.6"
