--- a/package.json
+++ b/package.json
@@ -3,29 +3,57 @@
   "version": "1.0.0",
   "description": "Starter project for DV1677 JSRamverk",
   "main": "app.mjs",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --exit --timeout 10000",
+    "start": "nodemon app.js",
+    "clean": "rm -rf node_modules package-lock.json",
+    "coverage": "nyc npm test",
+    "eslint": "eslint"
+  },
+  "nyc": {
+    "include": [
+      "routes/**/*.js",
+      "remoteDocs",
+      "db/mongo/mongoDB.mjs"
+    ],
+    "exclude": [
+      "test/**/*.js"
+    ],
+    "reporter": [
+      "text",
+      "html"
+    ]
   },
   "keywords": [],
-  "author": "Olga Egorova",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.9.0",
     "morgan": "^1.10.0",
+    "node-html-parser": "^1.1.12",
+    "nodemon": "^3.1.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/OlganeOlga/JSbasedRamVerk.git"
-  },
-  "bugs": {
-    "url": "https://github.com/OlganeOlga/JSbasedRamVerk/issues"
-  },
-  "homepage": "https://github.com/OlganeOlga/JSbasedRamVerk#readme"
+  "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@types/sinon": "^17.0.3",
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.10.0",
+    "mocha": "^10.7.3",
+    "nyc": "^17.1.0",
+    "sinon": "^19.0.2",
+    "typescript-eslint": "^8.8.0"
+  }
 }
