--- a/package.json
+++ b/package.json
@@ -4,26 +4,15 @@
   "description": "Starter project for DV1677 JSRamverk",
   "main": "app.mjs",
   "type": "module",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "nyc --reporter=html --reporter=text --reporter=clover mocha --exit --timeout 10000",
+    "test": "NODE_ENV=test nyc --reporter=html --reporter=text --reporter=clover mocha ./test/**/*.test.mjs --exit --timeout 10000",
     "start": "nodemon app.js",
     "clean": "rm -rf node_modules package-lock.json",
     "coverage": "nyc npm test",
     "eslint": "eslint"
-  },
-  "nyc": {
-    "include": [
-      "routes/**/*.js",
-      "remoteDocs",
-      "db/mongo/mongoDB.mjs"
-    ],
-    "exclude": [
-      "test/**/*.js"
-    ],
-    "reporter": [
-      "text",
-      "html"
-    ]
   },
   "keywords": [],
   "author": "",
