--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "CI-kedja" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "CI-kedja" ]
 
 jobs:
   build:
@@ -18,6 +18,7 @@ jobs:
       matrix:
         node-version: [18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        mongod-version: ['4.2', '4.4', '5.0']
 
     steps:
     - uses: actions/checkout@v4
@@ -25,3 +26,4 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+        
