--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "coverage": "nyc npm test",
     "start": "nodemon app.js",
     "clean": "rm -rf node_modules package-lock.json",
-    
     "eslint": "eslint"
   },
   "keywords": [],
@@ -36,6 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/sinon": "^17.0.3",
+    "bson": "^6.8.0",
     "chai": "^5.1.1",
     "chai-http": "^5.0.0",
     "eslint": "^9.11.1",
