--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "deploy": "npm run build && rsync -av --delete build/ oleg22@ssh.student.bth.se:www/editor"
   },
   "eslintConfig": {
     "extends": [
