--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,16 +12,21 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "resolve-cwd": "^3.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "webpack": "^5.95.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "deploy": "npm run build && rsync -av --delete build/ oleg22@ssh.student.bth.se:www/editor"
+    "deploy": "rsync -av --delete -e 'ssh -i /home/oleg22/.ssh/dbwebb' build/ oleg22@ssh.student.bth.se:www/editor"
   },
   "eslintConfig": {
     "extends": [
