--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,59 +1,27 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
 name: Node.js CI
 
 on:
   push:
-    branches:
-      - main  # Replace with your default branch if it's different
+    branches: [ "CI-kedja" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "CI-kedja" ]
 
 jobs:
-  backend:
+  build:
+
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js for Backend
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'  # Specify the Node.js version
-
-      - name: Install Backend Dependencies
-        run: |
-          cd backend
-          npm install
-
-      - name: Run Backend Tests
-        run: |
-          cd backend
-          npm test  # Adjust this if your test script is different
-
-  frontend:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js for Frontend
-        uses: actions/setup-node@v4
-        with:
-          node-version: [18.x, 20.x, 22.x]
-
-      - name: Install Frontend Dependencies
-        run: |
-          cd frontend
-          npm install
-
-      - name: Build Frontend
-        run: |
-          cd frontend
-          npm run build
-
-      - name: Run Frontend Tests
-        run: |
-          cd frontend
-          npm test 
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
