--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
-{
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
+  {
+    "name": "jsramverk-editor",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,11 +23,11 @@
     "webpack": "^5.95.0"
   },
   "scripts": {
-    "start": "npm run ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "rsync -av --delete -e 'ssh -i /home/oleg22/.ssh/dbwebb' build/ oleg22@ssh.student.bth.se:www/editor"
+    "deploy": "npm run build && rsync -av --delete build/ oleg22@ssh.student.bth.se:www/editor"
   },
   "eslintConfig": {
     "extends": [
