--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,10 @@
   "main": "app.mjs",
   "type": "module",
   "scripts": {
-    "test": "NODE_ENV=test nyc --reporter=html --reporter=text --reporter=clover mocha ./test/**/*.test.mjs --exit --timeout 10000",
+    "test": "NODE_ENV=test jest --coverage",
     "start": "nodemon app.js",
     "clean": "rm -rf node_modules package-lock.json",
-    "coverage": "nyc npm test",
+    "coverage": "jest --coverage",
     "eslint": "eslint"
   },
   "keywords": [],
@@ -30,16 +30,17 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.7",
+    "@babel/register": "^7.25.7",
     "@eslint/js": "^9.11.1",
     "@types/sinon": "^17.0.3",
-    "chai": "^5.1.1",
-    "chai-http": "^5.0.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0",
-    "mocha": "^10.7.3",
-    "nyc": "^17.1.0",
+    "jest": "^29.7.0",
     "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "typescript-eslint": "^8.8.0"
   },
   "directories": {
