--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.mjs",
   "type": "module",
   "scripts": {
-    "test": "NODE_ENV=test jest --coverage",
+    "test": "NODE_ENV=test jest --coverage --detectOpenHandles",
     "start": "nodemon app.js",
     "clean": "rm -rf node_modules package-lock.json",
     "coverage": "jest --coverage",
