--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,12 +5,20 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "CI-kedja" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "CI-kedja" ]
 
 env:
   JWT_SECRET: "DUMMYSECRETFORTESTINGJWT12345678"
+  ATLAS_USERNAME: "oleg22"
+  ATLAS_PASSWORD: DEyTL0mOhfjdcK8g"
+  LOCAL_DSN: "mongodb://localhost:27017"
+  DB_CLUSTER: "texteditor"
+  DB_NAME: "docs"
+  COLLECTION_NAME: "document"
+  TEST_PORT: 4000
+  PORT: 3000
 
 jobs:
   build:
