--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,7 @@
     "morgan": "^1.10.0",
     "node-html-parser": "^1.1.12",
     "nodemon": "^3.1.7",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.7",
