--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,7 @@
     "mongodb": "^6.9.0",
     "morgan": "^1.10.0",
     "node-html-parser": "^1.1.12",
-    "nodemon": "^3.1.7",
-    "sqlite": "^5.1.1"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.7",
