rename branch in git-workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "jest-tests-works" ]
+    branches: [ "jest-tests-work" ]
   pull_request:
-    branches: [ "jest-tests-works" ]
+    branches: [ "jest-tests-work" ]
 
 env:
   # JWT_SECRET: "DUMMYSECRETFORTESTINGJWT12345678"
